--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,15 @@
 {
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#00391c",
+        "activityBar.activeBorder": "#7d00ff",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#7d00ff",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "statusBar.border": "#000603",
+        "statusBarItem.hoverBackground": "#00391c",
+        "titleBar.border": "#000603",
+        "titleBar.inactiveBackground": "#00060399",
+        "titleBar.inactiveForeground": "#e7e7e799"
+    },
+    "peacock.color": "#000603"
 }
