--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
     - assets/modiuser.png
     - assets/partner.png
     - assets/depot.png
+    - assets/logoGOUKODY.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
